--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "erc-token-abis": "^1.0.0",
     "ethers": "^5.6.9",
     "graphql": "^16.5.0",
+    "lit-js-sdk": "^1.1.207",
     "next": "12.2.1",
+    "nft.storage": "^7.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "svg-loaders": "^0.2.0",
