--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@zoralabs/zdk": "^2.1.3",
     "erc-token-abis": "^1.0.0",
     "ethers": "^5.6.9",
+    "fs": "^0.0.1-security",
     "graphql": "^16.5.0",
     "lit-js-sdk": "^1.1.207",
     "next": "12.2.1",
